force-app/main/default/objects/Hygiene_Snapshot__c/Hygiene_Snapshot__c.object-meta.xml
        <CustomObject>
          <label>Hygiene Snapshot</label>
          <pluralLabel>Hygiene Snapshots</pluralLabel>
          <description>Aggregate data-quality / hygiene count per (run_date, metric_key). Each row drives a KPI tile or trend line on the Sales Ops dashboard.</description>
          <sharingModel>ReadWrite</sharingModel>
          <nameField>
  <label>Auto Number</label>
  <type>AutoNumber</type>
  <displayFormat>HYG-{0000000}</displayFormat>
</nameField>
        </CustomObject>