force-app/main/default/objects/Hygiene_Snapshot__c/fields/Action__c.field-meta.xml
    <CustomField>
      <fullName>Action__c</fullName>
      <label>Recommended Action</label>
      <type>LongTextArea</type>
      <length>2000</length>
    </CustomField>