force-app/main/default/objects/Hygiene_Snapshot__c/fields/Count__c.field-meta.xml
    <CustomField>
      <fullName>Count__c</fullName>
      <label>Count</label>
      <type>Number</type>
      <precision>10</precision>
<scale>0</scale>
    </CustomField>