force-app/main/default/objects/Hygiene_Snapshot__c/fields/Delta__c.field-meta.xml
    <CustomField>
      <fullName>Delta__c</fullName>
      <label>Delta (curr - prior)</label>
      <type>Number</type>
      <precision>10</precision>
<scale>0</scale>
    </CustomField>