force-app/main/default/objects/Hygiene_Snapshot__c/fields/Grain__c.field-meta.xml
    <CustomField>
      <fullName>Grain__c</fullName>
      <label>Grain</label>
      <type>Picklist</type>
      <valueSet>
  <valueSetDefinition>
    <value><fullName>deal</fullName><default>false</default><label>deal</label></value>
    <value><fullName>account</fullName><default>false</default><label>account</label></value>
    <value><fullName>installation</fullName><default>false</default><label>installation</label></value>
    <value><fullName>quote</fullName><default>false</default><label>quote</label></value>
    <value><fullName>closed_deal</fullName><default>false</default><label>closed_deal</label></value>
    <value><fullName>whitespace</fullName><default>false</default><label>whitespace</label></value>
  </valueSetDefinition>
</valueSet>
    </CustomField>