force-app/main/default/objects/Hygiene_Snapshot__c/fields/Is_Hero_Alert__c.field-meta.xml
<CustomField>
  <fullName>Is_Hero_Alert__c</fullName>
  <label>Is Hero Alert?</label>
  <type>Checkbox</type>
  <defaultValue>false</defaultValue>
</CustomField>