force-app/main/default/objects/Hygiene_Snapshot__c/fields/Metric_Label__c.field-meta.xml
<CustomField>
  <fullName>Metric_Label__c</fullName>
  <label>Metric Label</label>
  <type>Text</type>
  <length>255</length>
</CustomField>