force-app/main/default/objects/Hygiene_Snapshot__c/fields/Prior_Count__c.field-meta.xml
    <CustomField>
      <fullName>Prior_Count__c</fullName>
      <label>Prior Run Count</label>
      <type>Number</type>
      <precision>10</precision>
<scale>0</scale>
    </CustomField>