force-app/main/default/objects/Hygiene_Snapshot__c/fields/Severity__c.field-meta.xml
    <CustomField>
      <fullName>Severity__c</fullName>
      <label>Severity</label>
      <type>Picklist</type>
      <valueSet>
  <valueSetDefinition>
    <value><fullName>Critical</fullName><default>false</default><label>Critical</label></value>
    <value><fullName>Important</fullName><default>false</default><label>Important</label></value>
    <value><fullName>Domain</fullName><default>false</default><label>Domain</label></value>
    <value><fullName>Baseline</fullName><default>false</default><label>Baseline</label></value>
  </valueSetDefinition>
</valueSet>
    </CustomField>