force-app/main/default/objects/Hygiene_Snapshot__c/fields/SF_Logic__c.field-meta.xml
    <CustomField>
      <fullName>SF_Logic__c</fullName>
      <label>SF Logic (rule)</label>
      <type>LongTextArea</type>
      <length>2000</length>
    </CustomField>